--- a/index.html
+++ b/index.html
@@ -2,26 +2,32 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Список контрибьютеров</title>
+    <title>Крестики-нолики</title>
     <link rel="stylesheet" href="styles\style.css" />
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
     <main>
-      <div class="selector">
-        <select class="select">
-          <option>ALL</option>
-          <option >GOLD</option>
-          <option >SILVER</option>
-          <option >BRONZE</option>
-        </select>
-        <button class="asc">a-z</button>
-        <button class="desc">z-a</button>
+      <div class="firstLine">
+        <div class="first coordinate" id="0"></div>
+        <div class="second coordinate" id="1"></div>
+        <div class="third coordinate" id="2"></div>
       </div>
-
-      <div class="contact"></div>
+      <div class="secondLine">
+        <div class="fours coordinate" id="3"></div>
+        <div class="fives coordinate" id="4"></div>
+        <div class="sixes coordinate" id="5"></div>
+      </div>
+      <div class="thirdLine">
+      <div class="sevens coordinate" id="6"></div>
+      <div class="eights coordinate" id="7"></div>
+      <div class="nines coordinate" id="8"></div>
+    </div>
     </main>
+    <footer>
+      <div class="status"></div>
+      <button class="clear">CLEAR</button>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
