--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   <body>
     <main>
       <div class="firstLine">
-        <div class="first coordinate" id="0"></div>
-        <div class="second coordinate" id="1"></div>
-        <div class="third coordinate" id="2"></div>
+        <div class="first coordinate" id="00"></div>
+        <div class="second coordinate" id="01"></div>
+        <div class="third coordinate" id="02"></div>
       </div>
       <div class="secondLine">
-        <div class="fours coordinate" id="3"></div>
-        <div class="fives coordinate" id="4"></div>
-        <div class="sixes coordinate" id="5"></div>
+        <div class="fours coordinate" id="10"></div>
+        <div class="fives coordinate" id="11"></div>
+        <div class="sixes coordinate" id="12"></div>
       </div>
       <div class="thirdLine">
-      <div class="sevens coordinate" id="6"></div>
-      <div class="eights coordinate" id="7"></div>
-      <div class="nines coordinate" id="8"></div>
-    </div>
+        <div class="sevens coordinate" id="20"></div>
+        <div class="eights coordinate" id="21"></div>
+        <div class="nines coordinate" id="22"></div>
+      </div>
     </main>
     <footer>
       <div class="status"></div>
       <button class="clear">CLEAR</button>
+      <div class="theEnd"></div>
     </footer>
     <script src="main.js"></script>
   </body>
